--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,14 @@ html {
 }
 
 .masthead {
-
+  background-color: #588477;
+  background-image: url("../images/leaf-bg.svg");
+  background-size: 64px auto;
 }
 
 .logo {
   text-align: center;
+  color: #fff;
 }
 
 .nav {
@@ -16,18 +19,33 @@ html {
 
 .nav a {
   text-decoration: none;
+  color: #fff;
+  background-color: #467366;
+  border-radius: 8px;
+  border: 3px solid #2d5a4d;
 }
 
 .nav a:hover {
-
+  background-image: url("../images/leaf-icon.svg");
+  background-size: 64px;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #145b1d;
+  background-color: #fff;
 }
 
 .banner {
-
+  background-image: url("..images/banner.jpg");
+  background-size: auto;
+  background-repeat: no-repeat;
 }
 
 .banner-content {
-
+  background-image: url("..images/two-leaves.svg");
+  background-repeat: no-repeat;
+  background-size: 64px;
+  background-position: left top;
+  color: #fff;
 }
 
 @media only screen and (min-width: 60em) {
