--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ html {
 
 .banner {
   background-image: url("..images/banner.jpg");
-  background-size: 64px;
+  background-size: auto;
   background-repeat: no-repeat;
 }
 
