--- a/css/main.css
+++ b/css/main.css
@@ -37,16 +37,20 @@ html {
 }
 
 .banner {
-  background-image: url("..images/banner.jpg");
+  background-image: url("../images/banner.jpg");
   background-size: auto;
   background-repeat: no-repeat;
+  background-position: center;
+  padding-top: 5em;
+  padding-bottom: 5em;
 }
 
 .banner-content {
-  background-image: url("..images/two-leaves.svg");
+  background-image: url("../images/two-leaves.svg");
   background-repeat: no-repeat;
   background-size: 64px;
   background-position: left top;
+  padding: 1em;
   color: #fff;
 }
 
