--- a/css/main.css
+++ b/css/main.css
@@ -37,12 +37,11 @@ html {
 }
 
 .banner {
+  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8));
   background-image: url("../images/banner.jpg");
-  background-size: auto;
+  background-size: 1440px;
   background-repeat: no-repeat;
   background-position: center;
-  padding-top: 5em;
-  background-image: linear-gradient(to bottom);
 }
 
 .banner-content {
@@ -51,6 +50,7 @@ html {
   background-size: 64px;
   background-position: left top;
   color: #fff;
+  padding-top: 19em;
 }
 
 @media only screen and (min-width: 60em) {
