--- a/css/main.css
+++ b/css/main.css
@@ -37,20 +37,21 @@ html {
 }
 
 .banner {
-  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8));
+  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8) 50%);
   background-image: url("../images/banner.jpg");
-  background-size: 1440px;
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: bottom center;
+  padding-top: 188px;
 }
 
 .banner-content {
   background-image: url("../images/two-leaves.svg");
   background-repeat: no-repeat;
-  background-size: 64px;
-  background-position: left top;
+  background-size: 90px;
+  background-position: 1em 0;
   color: #fff;
-  padding-top: 19em;
+  padding-top: 110px;
 }
 
 @media only screen and (min-width: 60em) {
