--- a/css/main.css
+++ b/css/main.css
@@ -37,8 +37,7 @@ html {
 }
 
 .banner {
-  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8) 50%);
-  background-image: url("../images/banner.jpg");
+  background-image: linear-gradient(to top, rgba(16, 52, 41, .8), rgba(16, 52, 41, 0) 50%), url("../images/banner.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom center;
